--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  flutter_secure_storage: ^4.2.1
-  email_validator: ^1.0.0
+  flutter_secure_storage: ^5.0.2
+  email_validator: ^2.0.1
   sliding_up_panel: ^2.0.0+1
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
