--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   email_validator: ^2.0.1
   sliding_up_panel: ^2.0.0+1
   shared_preferences: ^2.0.11
+  http: ^0.13.4
+  image_picker: ^0.8.4+8
+  image_downloader: ^0.31.0
+  sqflite: ^2.0.2
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
