--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   image_downloader: ^0.31.0
   sqflite: ^2.0.2
   path_provider: ^2.0.9
+  infinite_scroll_pagination: ^3.1.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
